[package]
edition = "2021"
name = "sand"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
# color-eyre = "0.6.2"
egui-macroquad = "0.12.0"
# enum-map = "2.4.2"
macroquad = "0.3.25"
rand = "0.8.5"

[profile.release]
lto = true
