[package]
edition = "2021"
name = "sand"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
egui-macroquad = "0.12.0"
macroquad = "0.3.25"
rand = "0.8.5"
webbrowser = "0.8.3"

[profile.release]
# lto = true
# opt-level = 3
debug = 1

[profile.dev.package.'*']
opt-level = 3

[profile.dev]
debug = 2
